feat: migrate to virtual threads for async locating